# groundskeeper

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  README.md  index.html  mise.toml  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci-debug.yml  docs.yml  tests.yml
AGENTS/: index.html
FUTURE_WORK/: index.html
ai_agent_docs/: architecture.md  config-and-skills.md
architecture/: index.html
config-and-skills/: index.html
docker/: Dockerfile  docker-compose.yml
docs/: AGENTS.md  FUTURE_WORK.md  architecture.md  config-and-skills.md  future-work.md  getting-started.md  index.md
docs/reference/: api.md  cli.md  skills.md
future-work/: index.html
getting-started/: index.html
groundskeeper/: __init__.py  protocols.py
groundskeeper/adapters/: __init__.py  builtin_store.py  claude_code.py  dry_run.py  github_actions.py  local_store.py
groundskeeper/builtins/templates/: config.yml
groundskeeper/cli/: main.py
groundskeeper/domain/: __init__.py  config.py  errors.py  models.py  parser.py  triggers.py
reference/api/: index.html
reference/cli/: index.html
reference/skills/: index.html
search/: search_index.json
tests/: conftest.py
tests/adapters/: test_builtin_store.py  test_claude_code.py  test_dry_run.py  test_github_actions.py  test_local_store.py  test_resolution.py
tests/cli/: test_cli_check.py  test_cli_generate.py  test_cli_init.py  test_cli_list.py  test_cli_run.py  test_cli_run_workflow.py
tests/domain/: test_config.py  test_models.py  test_parser.py
tests/e2e/: conftest.py  test_e2e_commands.py
(+12 files in other folders)
