[project]
name = "groundskeeper"
version = "0.1.0"
description = "Script AI agents to run on your PRs"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.scripts]
gk = "groundskeeper.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "ty>=0.0.2",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.26.1",
    "pytest-timeout>=2.3",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "RUF",    # ruff-specific rules
]

ignore = [
    "E501",   # line too long
]

[tool.ruff.lint.isort]
known-first-party = ["groundskeeper"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["groundskeeper"]

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end tests requiring installed gk binary",
]
addopts = "-m 'not e2e'"
testpaths = ["tests"]
